# ChangeLog for Gentoo Linux Installer
# Copyright 2004 Gentoo Technologies, Inc.
# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.57 2005/01/29 08:14:03 agaffney Exp $

*GLI-gtkfe-0.01 (11 Dec 2004)

  29 Jan 2005; Andrew Gaffnye <agaffney@gentoo.org>
  Shell for partition properties dialog. Added "working" Ok and Cancel
  buttons to PartProperties.py

  27 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
  add len(sys.argv) check so gtkfe.py can be run without -p. Readded
  development-sources and gentoo-dev-sources to Kernel.py

  26 Jan 2005; John Laliberte <allanonl@bu.edu>
  ExtraPackages.py - major overhaul of the screen.  Uses objects for the
  'Section' and 'Category'.

  24 Jan 2005; John Laliberte <allanonl@bu.edu>
  Networking.py - fixed the bug where if no device was entered, it would
  raise an exception.  also fixed the bug for if you had only a dhcp device.
  Left justified the labels on the entry boxen.

  22 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
  Fixed bug where end sector was set 1 too high causing the last partition
  to be 1 sector past the end of the drive. Added --pretend flag to gtkfe.py
  that gets passed to GLIClientController

  19 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
  Added "Portage snapshot URI" field to PortageTree.py

  17 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
  Added blurb about me being lazy to Welcome. Turned off pretend mode for
  gtkfe (no more training wheels!). Added mount point/opts fields to
  Partitioning.py. "fixed" invalid IP address problem in Networking.py

  17 Jan 2005; John Laliberte <allanonl@bu.edu>
  Networking.py - changed from combobox to comboentrybox.  Redid some of the
  logic used to make the user experience better.
  Widgets.py - added an errorbox2 that has okay and cancel.

  16 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
  RunInstall.py called poll_notifications() in gtk idle loop and progress